--- a/app/pages/layout/blog.pug
+++ b/app/pages/layout/blog.pug
@@ -5,16 +5,16 @@ section.blog
 		.blog__info
 			h4.blog__info-title Title of a post
 			p.blog__info-text In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.
-			button.button.blog__info-button button
+			button.button.blog__info-button Read more
 	.blog__item
 		.blog__img
 		.blog__info
 			h4.blog__info-title Title of a post
 			p.blog__info-text In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.
-			button.button.blog__info-button button
+			button.button.blog__info-button Read more
 	.blog__item
 		.blog__img
 		.blog__info
 			h4.blog__info-title Title of a post
 			p.blog__info-text In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.
-			button.button.blog__info-button button
+			button.button.blog__info-button Read more
