--- a/app/layout/blog.html
+++ b/app/layout/blog.html
@@ -6,7 +6,7 @@
     <div class="blog__info">
       <h4 class="blog__info-title">Title of a post</h4>
       <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-      <button class="button blog__info-button">button</button>
+      <button class="button blog__info-button">Read more</button>
     </div>
   </div>
   <div class="blog__item">
@@ -14,7 +14,7 @@
     <div class="blog__info">
       <h4 class="blog__info-title">Title of a post</h4>
       <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-      <button class="button blog__info-button">button</button>
+      <button class="button blog__info-button">Read more</button>
     </div>
   </div>
   <div class="blog__item">
@@ -22,7 +22,7 @@
     <div class="blog__info">
       <h4 class="blog__info-title">Title of a post</h4>
       <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-      <button class="button blog__info-button">button</button>
+      <button class="button blog__info-button">Read more</button>
     </div>
   </div>
 </section>
