--- a/app/layout/main.html
+++ b/app/layout/main.html
@@ -76,7 +76,7 @@
             <div class="blog__info">
               <h4 class="blog__info-title">Title of a post</h4>
               <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-              <button class="button blog__info-button">button</button>
+              <button class="button blog__info-button">Read more</button>
             </div>
           </div>
           <div class="blog__item">
@@ -84,7 +84,7 @@
             <div class="blog__info">
               <h4 class="blog__info-title">Title of a post</h4>
               <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-              <button class="button blog__info-button">button</button>
+              <button class="button blog__info-button">Read more</button>
             </div>
           </div>
           <div class="blog__item">
@@ -92,7 +92,7 @@
             <div class="blog__info">
               <h4 class="blog__info-title">Title of a post</h4>
               <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-              <button class="button blog__info-button">button</button>
+              <button class="button blog__info-button">Read more</button>
             </div>
           </div>
         </section>
