--- a/app/layout/blog.html
+++ b/app/layout/blog.html
@@ -1,28 +1,28 @@
 
 <section class="blog">
   <h2 class="blog__title">Form the blog</h2>
-  <div class="blog__item">
-    <div class="blog__img"></div>
-    <div class="blog__info">
-      <h4 class="blog__info-title">Title of a post</h4>
-      <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-      <button class="button blog__info-button">Read more</button>
+  <div class="blogItem">
+    <div class="blogItem__img"></div>
+    <div class="blogItem__info">
+      <h4 class="blogItem__title">Title of a post</h4>
+      <p class="blogItem__text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
+      <button class="button">Read more</button>
     </div>
   </div>
-  <div class="blog__item">
-    <div class="blog__img"></div>
-    <div class="blog__info">
-      <h4 class="blog__info-title">Title of a post</h4>
-      <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-      <button class="button blog__info-button">Read more</button>
+  <div class="blogItem">
+    <div class="blogItem__img"></div>
+    <div class="blogItem__info">
+      <h4 class="blogItem__title">Title of a post</h4>
+      <p class="blogItem__text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
+      <button class="button">Read more</button>
     </div>
   </div>
-  <div class="blog__item">
-    <div class="blog__img"></div>
-    <div class="blog__info">
-      <h4 class="blog__info-title">Title of a post</h4>
-      <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-      <button class="button blog__info-button">Read more</button>
+  <div class="blogItem">
+    <div class="blogItem__img"></div>
+    <div class="blogItem__info">
+      <h4 class="blogItem__title">Title of a post</h4>
+      <p class="blogItem__text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
+      <button class="button">Read more</button>
     </div>
   </div>
 </section>
