--- a/app/layout/main.html
+++ b/app/layout/main.html
@@ -23,11 +23,11 @@
       <div class="maincontent">
         <!--TITLEPAGE-->
         <section class="titlepage">
-          <div class="titlepage__content">
-            <h1 class="titlepage__title">Title of the page</h1>
-            <h4 class="titlepage__subtitle">Subtitle</h4>
-            <p class="titlepage__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra turpis tristique nisi laoreet gravida. Sed sed orci ut ante pellentesque efficitur id ac erat. Morbi metus metus, dictum sed arcu at, interdum porttitor erat.</p>
-            <button class="button titlepage__button">Button</button>
+          <div class="titlepageContent">
+            <h1 class="titlepageContent__title">Title of the page</h1>
+            <h4 class="titlepageContent__subtitle">Subtitle</h4>
+            <p class="titlepageContent__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra turpis tristique nisi laoreet gravida. Sed sed orci ut ante pellentesque efficitur id ac erat. Morbi metus metus, dictum sed arcu at, interdum porttitor erat.</p>
+            <button class="button titlepageContent__button">Button</button>
           </div>
         </section>
         <!--MATERIALS-->
@@ -35,27 +35,27 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4 col-sm-12">
-                <div class="materials__block">
-                  <h4 class="materials__block-title">Photos </h4>
-                  <p class="materials__block-text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
-                  <button class="button">Button</button>
-                  <div class="materials__block-icon"><img src="img/photo.svg" alt="Photo"/></div>
+                <div class="blockFile">
+                  <h4 class="blockFile__title">Photos </h4>
+                  <p class="blockFile__text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
+                  <button class="button blockFile__button">Button</button>
+                  <div class="blockFile__icon"><img src="img/photo.svg" alt="Photo"/></div>
                 </div>
               </div>
               <div class="col-md-4 col-sm-12">
-                <div class="materials__block">
-                  <h4 class="materials__block-title">Videos</h4>
-                  <p class="materials__block-text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
-                  <button class="button">Button</button>
-                  <div class="materials__block-icon"><img src="img/film.svg" alt="Video"/></div>
+                <div class="blockFile">
+                  <h4 class="blockFile__title">Videos</h4>
+                  <p class="blockFile__text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
+                  <button class="button blockFile__button">Button</button>
+                  <div class="blockFile__icon"><img src="img/film.svg" alt="Video"/></div>
                 </div>
               </div>
               <div class="col-md-4 col-sm-12">
-                <div class="materials__block">
-                  <h4 class="materials__block-title">Downloads </h4>
-                  <p class="materials__block-text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
-                  <button class="button">Button</button>
-                  <div class="materials__block-icon"><img src="img/download.svg" alt="Download"/></div>
+                <div class="blockFile">
+                  <h4 class="blockFile__title">Downloads </h4>
+                  <p class="blockFile__text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
+                  <button class="button blockFile__button">Button</button>
+                  <div class="blockFile__icon"><img src="img/download.svg" alt="Download"/></div>
                 </div>
               </div>
             </div>
@@ -71,28 +71,28 @@
         <!--BLOG-->
         <section class="blog">
           <h2 class="blog__title">Form the blog</h2>
-          <div class="blog__item">
-            <div class="blog__img"></div>
-            <div class="blog__info">
-              <h4 class="blog__info-title">Title of a post</h4>
-              <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-              <button class="button blog__info-button">Read more</button>
+          <div class="blogItem">
+            <div class="blogItem__img"></div>
+            <div class="blogItem__info">
+              <h4 class="blogItem__title">Title of a post</h4>
+              <p class="blogItem__text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
+              <button class="button">Read more</button>
             </div>
           </div>
-          <div class="blog__item">
-            <div class="blog__img"></div>
-            <div class="blog__info">
-              <h4 class="blog__info-title">Title of a post</h4>
-              <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-              <button class="button blog__info-button">Read more</button>
+          <div class="blogItem">
+            <div class="blogItem__img"></div>
+            <div class="blogItem__info">
+              <h4 class="blogItem__title">Title of a post</h4>
+              <p class="blogItem__text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
+              <button class="button">Read more</button>
             </div>
           </div>
-          <div class="blog__item">
-            <div class="blog__img"></div>
-            <div class="blog__info">
-              <h4 class="blog__info-title">Title of a post</h4>
-              <p class="blog__info-text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
-              <button class="button blog__info-button">Read more</button>
+          <div class="blogItem">
+            <div class="blogItem__img"></div>
+            <div class="blogItem__info">
+              <h4 class="blogItem__title">Title of a post</h4>
+              <p class="blogItem__text">In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.</p>
+              <button class="button">Read more</button>
             </div>
           </div>
         </section>
