--- a/app/layout/materials.html
+++ b/app/layout/materials.html
@@ -3,27 +3,27 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <div class="materials__block">
-          <h4 class="materials__block-title">Photos </h4>
-          <p class="materials__block-text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
-          <button class="button">Button</button>
-          <div class="materials__block-icon"><img src="img/photo.svg" alt="Photo"/></div>
+        <div class="blockFile">
+          <h4 class="blockFile__title">Photos </h4>
+          <p class="blockFile__text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
+          <button class="button blockFile__button">Button</button>
+          <div class="blockFile__icon"><img src="img/photo.svg" alt="Photo"/></div>
         </div>
       </div>
       <div class="col-md-4 col-sm-12">
-        <div class="materials__block">
-          <h4 class="materials__block-title">Videos</h4>
-          <p class="materials__block-text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
-          <button class="button">Button</button>
-          <div class="materials__block-icon"><img src="img/film.svg" alt="Video"/></div>
+        <div class="blockFile">
+          <h4 class="blockFile__title">Videos</h4>
+          <p class="blockFile__text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
+          <button class="button blockFile__button">Button</button>
+          <div class="blockFile__icon"><img src="img/film.svg" alt="Video"/></div>
         </div>
       </div>
       <div class="col-md-4 col-sm-12">
-        <div class="materials__block">
-          <h4 class="materials__block-title">Downloads </h4>
-          <p class="materials__block-text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
-          <button class="button">Button</button>
-          <div class="materials__block-icon"><img src="img/download.svg" alt="Download"/></div>
+        <div class="blockFile">
+          <h4 class="blockFile__title">Downloads </h4>
+          <p class="blockFile__text">Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.</p>
+          <button class="button blockFile__button">Button</button>
+          <div class="blockFile__icon"><img src="img/download.svg" alt="Download"/></div>
         </div>
       </div>
     </div>
