--- a/app/pages/layout/blog.pug
+++ b/app/pages/layout/blog.pug
@@ -1,20 +1,20 @@
 section.blog
 	h2.blog__title Form the blog
-	.blog__item
-		.blog__img
-		.blog__info
-			h4.blog__info-title Title of a post
-			p.blog__info-text In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.
-			button.button.blog__info-button Read more
-	.blog__item
-		.blog__img
-		.blog__info
-			h4.blog__info-title Title of a post
-			p.blog__info-text In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.
-			button.button.blog__info-button Read more
-	.blog__item
-		.blog__img
-		.blog__info
-			h4.blog__info-title Title of a post
-			p.blog__info-text In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.
-			button.button.blog__info-button Read more
+	.blogItem
+		.blogItem__img
+		.blogItem__info
+			h4.blogItem__title Title of a post
+			p.blogItem__text In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.
+			button.button Read more
+	.blogItem
+		.blogItem__img
+		.blogItem__info
+			h4.blogItem__title Title of a post
+			p.blogItem__text In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.
+			button.button Read more
+	.blogItem
+		.blogItem__img
+		.blogItem__info
+			h4.blogItem__title Title of a post
+			p.blogItem__text In hac habitasse platea dictumst. Phasellus finibus ipsum enim, non pretium massa mattis non. Curabitur ut tempus ex. Nunc dictum est enim, consectetur convallis odio mollis tempus.
+			button.button Read more
