--- a/app/pages/layout/materials.pug
+++ b/app/pages/layout/materials.pug
@@ -2,23 +2,23 @@ section.materials
 	.container
 		.row
 			.col-md-4.col-sm-12
-				.materials__block
-					h4.materials__block-title Photos 
-					p.materials__block-text Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.
-					button.button Button
-					.materials__block-icon
+				.blockFile
+					h4.blockFile__title Photos 
+					p.blockFile__text Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.
+					button.button.blockFile__button Button
+					.blockFile__icon
 						img(src="img/photo.svg", alt="Photo")
 			.col-md-4.col-sm-12
-				.materials__block
-					h4.materials__block-title Videos
-					p.materials__block-text Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.
-					button.button Button
-					.materials__block-icon
+				.blockFile
+					h4.blockFile__title Videos
+					p.blockFile__text Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.
+					button.button.blockFile__button Button
+					.blockFile__icon
 						img(src="img/film.svg", alt="Video") 
 			.col-md-4.col-sm-12
-				.materials__block
-					h4.materials__block-title Downloads 
-					p.materials__block-text Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.
-					button.button Button
-					.materials__block-icon
+				.blockFile
+					h4.blockFile__title Downloads 
+					p.blockFile__text Vestibulum suscipit tortor magna, quis pellentesque arcu volutpat ac. Tempus leo erat, sit amet ullamcorper nisl.
+					button.button.blockFile__button Button
+					.blockFile__icon
 						img(src="img/download.svg", alt="Download")
