--- a/app/sass/_defaultsettings.sass
+++ b/app/sass/_defaultsettings.sass
@@ -97,11 +97,14 @@ button, input, select, a, textarea
 		border: none
 		outline: none
 
+/*==============================BEM==============================*/
+
 .button
 	display: flex
 	justify-content: center
 	align-items: center
-	width: 160px
+	padding-left: 35px
+	padding-right: 35px
 	height: 55px
 	color: #ffffff
 	border: 2px solid $main
