--- a/app/pages/layout/titlepage.pug
+++ b/app/pages/layout/titlepage.pug
@@ -1,6 +1,6 @@
 section.titlepage
-	.titlepage__content
-		h1.titlepage__title Title of the page
-		h4.titlepage__subtitle Subtitle
-		p.titlepage__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra turpis tristique nisi laoreet gravida. Sed sed orci ut ante pellentesque efficitur id ac erat. Morbi metus metus, dictum sed arcu at, interdum porttitor erat.
-		button.button.titlepage__button Button
+	.titlepageContent
+		h1.titlepageContent__title Title of the page
+		h4.titlepageContent__subtitle Subtitle
+		p.titlepageContent__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra turpis tristique nisi laoreet gravida. Sed sed orci ut ante pellentesque efficitur id ac erat. Morbi metus metus, dictum sed arcu at, interdum porttitor erat.
+		button.button.titlepageContent__button Button
